--- a/style.css
+++ b/style.css
@@ -93,8 +93,8 @@
 .video-centre {
   display: block;
   margin: 30px auto;
-  width: 100%;
-  max-width: 500px;
+  width: 80%;
+  max-width: 700px;
 
   border-radius: 20px;
   overflow: hidden;
@@ -111,6 +111,32 @@
   box-shadow: 0 18px 40px rgba(0,0,0,0.35);
 }
 
+.video-wrapper {
+  width: 80%;
+  max-width: 700px;
+  margin: 30px auto;
+
+  border-radius: 20px;
+  overflow: hidden;
+
+  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.25);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.video-wrapper:hover {
+  transform: scale(1.01);
+  box-shadow: 0 18px 40px rgba(0,0,0,0.35);
+}
+
+.video-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  aspect-ratio: 16 / 9;
+  border: none;
+  display: block;
+}
+
+
 .preview-site {
   display: block;
   margin: 30px auto;
@@ -122,4 +148,5 @@
   border: 2px solid #c7a864;
   box-shadow: 0 12px 30px rgba(0,0,0,0.25);
 }
+
 
